# icon-tracer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  vercel.json
.github/workflows/: ci.yml  release.yml
docs/: governance.md  release.md
scripts/: check-governance.py  icon-batch.py  potrace-broad-probe.py  potrace-parity.py  potrace_parity_limits.py  vector-quality-baseline.json  vector-quality.py
src/: api.rs  cli.rs  components.rs  lib.rs  main.rs  optimization_report.rs  optimize.rs  raster.rs  tests.rs  trace.rs
src/raster/: bmp.rs  pnm.rs
src/svg/: cubic.rs  geometry.rs  mod.rs  path_data.rs  path_tokens.rs  pixel_candidate.rs  pixel_candidate_annular.rs  pixel_candidate_capsule.rs  pixel_candidate_metrics.rs  pixel_candidate_polygon.rs  pixel_trace.rs  potrace_bestpolygon.rs  potrace_cleanup.rs  potrace_optimize.rs  potrace_polygon.rs  potrace_vertex.rs  precision.rs  relaxed_polygon.rs  render.rs  templates.rs
src/tests/: candidate_selection.rs  capsule_templates.rs  cleanup.rs  fine_opt_candidate.rs  fixtures.rs  loose_opt_candidate.rs  mod.rs  optimizer.rs  path_data.rs  pixel_templates.rs  potrace_core.rs  quadratic_vertex_candidate.rs  ring_sector_templates.rs  rounded_rect_templates.rs  sharp_v_templates.rs  stepped_e_templates.rs  u_shape_templates.rs
src/trace/: pixel.rs
tests/: bmp.rs  cli.rs  components.rs  jpeg.rs  library_api.rs  png.rs  pnm.rs  tracing.rs
tests/tracing/: helpers.rs
wasm/: Cargo.toml  LICENSE
wasm/src/: lib.rs
web/: index.html  package.json  vite.config.ts
web/scripts/: build-wasm.mjs
web/src/: App.tsx  i18n.ts  (+6 more)
(+69 files in other folders)
