[package]
name = "icon-tracer"
version = "0.1.0"
edition = "2021"
description = "A small Rust icon-oriented bitmap-to-SVG tracer."
license = "MIT"

[features]
default = []
slow-tests = []

[dependencies]
jpeg-decoder = { version = "0.3", default-features = false }
png = "0.17"

[lib]
name = "icon_tracer"
path = "src/lib.rs"

[[bin]]
name = "icon-tracer"
path = "src/main.rs"
