[package]
name = "icon-tracer-wasm"
version = "0.1.1"
edition = "2021"
description = "WebAssembly bindings for icon-tracer."
license = "MIT"
repository = "https://github.com/xzhih/icon-tracer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
icon-tracer = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
